[package]
name = "rglua"
description = "Rust bindings to the lua api for gmod binary module creation"
version = "0.4.0"
authors = ["Vurv <vurvdevelops@gmail.com>"]
keywords = ["glua","garrysmod","lua"]
readme = "README.md"
license = "MIT"
edition = "2018"

# Remember to make your output module a cdylib.

[dependencies]
libloading = "0.7.0"
once_cell = "1.7.2"

vtables = "0.1.0"
vtables_derive = "0.1.0"