[package]
name = "rglua"
description = "Rust bindings to the lua api for gmod binary module creation"
version = "0.6.0"
authors = ["Vurv <vurvdevelops@gmail.com>"]
keywords = ["glua", "garrysmod", "lua", "gmod"]
readme = "README.md"
license = "MIT"
edition = "2021"

# Remember to make your output module a cdylib.

[dependencies]
libloading = "0.7.2"
once_cell = "1.8.0"

vtables = { version = "0.1.0", optional = true }
vtables_derive = { version = "0.1.0", optional = true }

[features]
default = ["interfaces"]
interfaces = ["vtables", "vtables_derive"]