[package]
name = "rglua"
description = "Toolkit for garrysmod development with the source sdk and luajit api"
version = "0.8.0"
authors = ["Vurv <vurvdevelops@gmail.com>"]
keywords = ["glua", "garrysmod", "lua", "gmod"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi", "game-development", "accessibility"]
readme = "README.md"
license = "MIT"
edition = "2021"

# Remember to make your output module a cdylib.

[dependencies]
libloading = "0.7.2"
once_cell = "1.8.0"
thiserror = "1.0.30"

derive_more = { version = "0.99.17", optional = true }

vtables = { version = "0.1.0", optional = true }
vtables_derive = { version = "0.1.0", optional = true }

[features]
default = ["interfaces", "userdata"]

interfaces = ["vtables", "vtables_derive"]

userdata = ["derive_more"]