[package]
name = "rglua-macros"
description = "Procedural macros to be used with rglua"
version = "0.3.0"
authors = ["Vurv <vurvdevelops@gmail.com>"]
keywords = ["glua", "garrysmod", "lua", "gmod"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi", "game-development", "accessibility"]
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/Vurv78/rglua"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full"] }

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
rglua = { path = "../rglua" }
