[package]
name = "rglua"
description = "Toolkit for garrysmod development with the source sdk and luajit api"
version = "2.1.0"
authors = ["Vurv <vurvdevelops@gmail.com>"]
keywords = ["glua", "garrysmod", "lua", "gmod"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi", "game-development", "accessibility"]
readme = "../README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/Vurv78/rglua"

# Remember to make your output module a cdylib.

[dependencies]
libloading = "0.7.2"
once_cell = "1.8.0"
thiserror = "1.0.30"

rglua-macros = { version = "0.1.0", path = "../rglua-macros" }
derive_more = { version = "0.99.17", optional = true }

vtables = { version = "0.1.0", optional = true }
vtables_derive = { version = "0.1.0", optional = true }

[features]
default = ["interfaces", "userdata"]

interfaces = ["vtables", "vtables_derive"]

userdata = ["derive_more"]