[package]
name = "rglua"
description = "Toolkit for garrysmod development with the source sdk and luajit api"
version = "3.0.0-beta2"
authors = ["Vurv <vurvdevelops@gmail.com>"]
keywords = ["glua", "garrysmod", "lua", "gmod"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi", "game-development", "accessibility"]
readme = "../README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/Vurv78/rglua"

# Remember to make your output module a cdylib.

[dependencies]
libloading = "0.7.2"
once_cell = "1.8.0"
thiserror = "1.0.30"

rglua-macros = { version = "0.2.0", path = "../rglua-macros" }

viable = { version = "0.2", optional = true }

[features]
default = ["interfaces"]
interfaces = ["viable"]